2006-10-23  Kevin McCullough  <KMcCullough@apple.com>

        Reviewed by 

       - Build fix

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * kjs/grammar.y:

2006-10-23  Kevin McCullough  <KMcCullough@apple.com>

        Reviewed by Maciej.

        - Makes the toTM function an operator.  Was going to piggy back on a patch but the patch needs more work.

        * kjs/DateMath.cpp:
        (KJS::equivalentYearForDST):
        * kjs/DateMath.h:
        (KJS::GregorianDateTime::operator tm):
        * kjs/date_object.cpp:
        (KJS::formatTime):
        (KJS::DateProtoFunc::callAsFunction):

2006-10-23  Kevin McCullough  <KMcCullough@apple.com>

        Reviewed by Maciej.

       - Fixes two regressions on win.  Both are stack overflows. For one the number of recursions is capped at 100, and for the other, nested parenthesis pairs are not evaluated (since they would evaluate to whatever is in them anyway).

        * kjs/grammar.y:
        * kjs/object.cpp:

2006-10-21  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Adam.
        
        Add minimal compatibility with MSVCRT leak checker

        * wtf/FastMalloc.h:

2006-10-23  Kevin McCullough  <KMcCullough@apple.com>

        Reviewed by Geof.

        - Sets the lowercase range correctly in the test and consolidates a variable to make the test more readable.

       * tests/mozilla/ecma/String/15.5.4.11-2.js:

2006-10-21  Darin Adler  <darin@apple.com>

        Reviewed by Anders.

        - http://bugs.webkit.org/show_bug.cgi?id=11377
          swap(Vector, Vector) should be O(1) instead of O(n)

        * wtf/Vector.h:
        (WTF::VectorBuffer::swap): Added.
        (WTF::Vector::swap): Added.
        (WTF::swap): Added overload that takes two Vector objects.

2006-10-21  Darin Adler  <darin@apple.com>

        Reviewed by Adam.

        - http://bugs.webkit.org/show_bug.cgi?id=11376
          build scripts should invoke make with "-j" option for multiple processors
